# SOAR-Bulk-Case-Closer-

./: README.md  definition.yaml  pyproject.toml
TIPCommon/: DataStream.py  __init__.py  cache.py  context.py  encryption.py  execution.py  extraction.py  filters.py  oauth.py  smp_io.py  smp_time.py  soar_ops.py  transformation.py  validation.py
TIPCommon/adapters/: __init__.py
TIPCommon/adapters/pubsub/: consts.py  data_models.py  parser.py  pubsub.py
TIPCommon/base/: __init__.py  data_models.py
TIPCommon/base/action/: __init__.py  action_parser.py  base_action.py  base_enrich_action.py  consts.py  data_models.py
TIPCommon/base/connector/: __init__.py  async_connector.py  base_connector.py  connector.py
TIPCommon/base/interfaces/: __init__.py  apiable.py  authable.py  logger.py  session.py
TIPCommon/base/job/: base_job.py  base_job_refresh_token.py  consts.py
TIPCommon/rest/: __init__.py  auth.py  custom_types.py  gcp.py  httplib.py  soar_api.py
TIPCommon/rest/async_soar_platform_clients/: base_soar_api.py  constants.py  secops_soar.py  soar_api_client.py  utils.py
TIPCommon/rest/soar_platform_clients/: base_soar_api.py
jobs/: BulkCaseCloserJob.py  BulkCaseCloserJob.yaml
