[project]
name = "Bulk-Case-Closer"
version = "1.0"
description = "Automates the process of finding and closing stale cases in bulk."
requires-python = ">=3.11,<3.12"
dependencies = [
    "requests>=2.32.3",
    "tipcommon",
]

[dependency-groups]
dev = [
    "environmentcommon",
    "integration-testing",
    "pytest-json-report>=1.5.0",
    "pytest>=8.3.5",
    "soar-sdk",
]

[tool.uv.sources]
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }
integration-testing = { path = "../../../../../packages/integration_testing_whls/integration_testing-2.2.7-py3-none-any.whl" }
tipcommon = { path = "../../../../../packages/tipcommon/whls/TIPCommon-2.2.7-py2.py3-none-any.whl" }
environmentcommon = { path = "../../../../../packages/envcommon/whls/EnvironmentCommon-1.0.2-py2.py3-none-any.whl" }

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
